--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,5 +1,9 @@
 name: CI-CD
 
+env:
+ resourceGroup: "learn"
+ clusterName: "taskcluster"
+
 on:
   push:
     branches: [ "main" ]
@@ -24,3 +28,22 @@ jobs:
           registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+          
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          
+      - name: Set up Azure CLI
+        uses: azure/CLI@v1
+
+      - name: Get AKS Credentials
+        run: az aks get-credentials --resource-group ${{ resourceGroup }} --name ${{ clusterName }}
+
+      - name: Install kubectl
+        run: |
+          sudo az aks install-cli
+
+      - name: Apply Kubernetes Deployment
+        run: |
+          kubectl apply -f deployment.yml 
