--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -38,7 +38,7 @@ jobs:
         uses: azure/CLI@v1
 
       - name: Get AKS Credentials
-        run: az aks get-credentials --resource-group ${{ resourceGroup }} --name ${{ clusterName }}
+        run: az aks get-credentials --resource-group ${{ env.resourceGroup }} --name ${{ env.clusterName }}
 
       - name: Install kubectl
         run: |
