--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -12,6 +12,9 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+  
+permissions:
+ id-token: write
 
 jobs:
   build:
@@ -28,6 +31,7 @@ jobs:
           client-secret: '3f8050ca-e931-4cc7-9d6b-5041bd6fc65d'
           tenant-id: 'aea4de64-772e-46f6-84c3-a12ef6e8899c'
           subscription-id: '86faab24-a754-426c-9e08-f54a249d5dba'
+          enable-AzPSSession: true
   
       - name: Azure CLI script
         uses: azure/CLI@v1
