--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -27,13 +27,9 @@ jobs:
           
       - name: Azure Login
         uses: azure/login@v1
-        with:
-          client-id: '5b949fd9-aca7-47d2-ad52-72764eca04ab'
-          client-secret: '3f8050ca-e931-4cc7-9d6b-5041bd6fc65d'
-          tenant-id: 'aea4de64-772e-46f6-84c3-a12ef6e8899c'
-          subscription-id: '86faab24-a754-426c-9e08-f54a249d5dba'
-          enable-AzPSSession: true
-  
+        with: 
+          creds: '{"clientId": "5b949fd9-aca7-47d2-ad52-72764eca04ab","clientSecret": "EIc8Q~HjwvgGqgJC2YykA36P~ZGpqpBAFwFRnbaU","subscriptionId": "86faab24-a754-426c-9e08-f54a249d5dba","tenantId": "aea4de64-772e-46f6-84c3-a12ef6e8899c","activeDirectoryEndpointUrl": "https://login.microsoftonline.com","resourceManagerEndpointUrl": "https://management.azure.com/","activeDirectoryGraphResourceId": "https://graph.windows.net/","sqlManagementEndpointUrl": "https://management.core.windows.net:8443/","galleryEndpointUrl": "https://gallery.azure.com/","managementEndpointUrl": "https://management.core.windows.net/","enable-AzPSSession": true}'
+
       - name: Azure CLI script
         uses: azure/CLI@v1
         with:
