--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Azure Login
         uses: azure/login@v1
         with: 
-          azcliversion: 2.30.0
           creds: ${{ secrets.AZURE_CREDENTIALS }}
+          enable-AzPSSession: true
 
       - name: Azure CLI script
         uses: azure/CLI@v1
