--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -34,11 +34,15 @@ jobs:
         with: 
           creds: ${{ secrets.AZURE_CREDENTIALS }}
           enable-AzPSSession: true
+          
+      - name: Get AKS Credentials
+        run: az aks get-credentials --resource-group ${{ resourceGroup }} --name ${{ clusterName }}
 
-      - name: Azure CLI script
-        uses: azure/CLI@v1
-        with:
-          azcliversion: latest
-          inlineScript: |
-            az account show
-            az group list
+      - name: Install kubectl
+        run: |
+          sudo az aks install-cli
+
+      - name: Apply Kubernetes Deployment
+        run: |
+          kubectl apply -f deployment.yml
+
