--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -29,6 +29,7 @@ jobs:
         uses: mr-smithers-excellent/docker-build-push@v6
         with:
           image: confidencedev/taskdb
+          tags: latest
           registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
