--- a/deployment.yml
+++ b/deployment.yml
@@ -23,6 +23,8 @@ spec:
               memory: "128Mi"
               cpu: "500m"
           env:
+            - name: PORT
+              value: "5000"
             - name: GOOGLE_CLIENT_ID
               value: "45156854380-rm3b37ji31k8mkob8t65vv858uc8719m.apps.googleusercontent.com"
             - name: GOOGLE_CLIENT_SECRET
@@ -55,4 +57,4 @@ spec:
     app: creator-service-app
   ports:
     - port: 80
-      targetPort: 4000
+      targetPort: 5000
