--- a/deployment.yml
+++ b/deployment.yml
@@ -86,7 +86,7 @@ spec:
               secretProviderClass: "azure-taskdbstore"
 
 ---
-apiVersion: secrets-store.csi.x-k8s.io/v1alpha1
+apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
   name: azure-taskdbstore
