--- a/deployment.yml
+++ b/deployment.yml
@@ -83,6 +83,7 @@ spec:
             driver: secrets-store.csi.k8s.io
             readOnly: true
             volumeAttributes:
+              mode: "persistent"
               secretProviderClass: "azure-taskdbstore"
 
 ---
