--- a/deployment.yml
+++ b/deployment.yml
@@ -74,11 +74,14 @@ spec:
                   name: akvsecrets
                   key: SESSION-SECRET
           volumeMounts:
-            - name: secrets-store01-inline
+            - name: secrets-store-inline
               mountPath: "/mnt/secrets-store"
               readOnly: true
       volumes:
-        - name: secrets-store01-inline
+        - name: persistent-storage
+          persistentVolumeClaim:
+            claimName: pvc
+        - name: secrets-store-inline
           csi:
             driver: secrets-store.csi.k8s.io
             readOnly: true
@@ -87,7 +90,7 @@ spec:
               secretProviderClass: "azure-taskdbstore"
 
 ---
-apiVersion: secrets-store.csi.x-k8s.io/v1
+apiVersion: secrets-store.csi.x-k8s.io/v1alpha1
 kind: SecretProviderClass
 metadata:
   name: azure-taskdbstore
@@ -156,6 +159,37 @@ spec:
           objectType: secret
     tenantId: aea4de64-772e-46f6-84c3-a12ef6e8899c
     useVMManagedIdentity: "false"
+
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: pv
+spec:
+  capacity:
+    storage: 1Gi
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: manual
+  hostPath:
+    #    path: "/mnt/data"  # - for Unix/Linux
+    #    path: "/mnt/host"  # - for Others
+    #    path: "/run/desktop/mnt/data/c/temp/testfiles"   # - for Windows
+    path: "/mnt/data"
+    type: DirectoryOrCreate
+
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: pvc
+spec:
+  resources:
+    requests:
+      storage: 1Gi
+  storageClassName: manual
+  accessModes:
+    - ReadWriteOnce
 
 ---
 apiVersion: v1
