--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -68,7 +68,7 @@ jobs:
             GOOGLE-CLIENT-SECRET
             SESSION-SECRET
 
-          azKeyVault: ${{ secrets.VAULT }}
+          keyvault: ${{ secrets.VAULT }}
           # azSubscription: ${{ secrets.SUBSCRIPTION }}
           # azResourceGroup: ${{ secrets.GROUP }}
 
