--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -56,18 +56,18 @@ jobs:
         uses: Azure/get-keyvault-secrets@v1
         with:
           # command: get
-          secrets: |
-            DB-DIALECT
-            DB-HOST
-            DM-NAME
-            DB-PASSWORD
-            DB-USERNAME
-            GITHUB-CLIENT-ID
-            GITHUB-CLIENT-SECRET
-            GOOGLE-CLIENT-ID
-            GOOGLE-CLIENT-SECRET
-            SESSION-SECRET
-
+          # secrets: |
+          #   DB-DIALECT
+          #   DB-HOST
+          #   DB-NAME
+          #   DB-PASSWORD
+          #   DB-USERNAME
+          #   GITHUB-CLIENT-ID
+          #   GITHUB-CLIENT-SECRET
+          #   GOOGLE-CLIENT-ID
+          #   GOOGLE-CLIENT-SECRET
+          #   SESSION-SECRET
+          secrets: "DB-DIALECT, DB-HOST"
           keyvault: ${{ secrets.VAULT }}
           # azSubscription: ${{ secrets.SUBSCRIPTION }}
           # azResourceGroup: ${{ secrets.GROUP }}
