--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -47,11 +47,16 @@ jobs:
       - name: Get AKS Credentials
         run: az aks get-credentials --resource-group ${{ env.resourceGroup }} --name ${{ env.clusterName }}
 
-      - name: Install Azure Key Vault Secrets
-        uses: Azure/get-keyvault-secrets@v1
+      - name: Install Azure CLI
+        uses: azure/cli@v1
+
+      - name: Retrieve secrets from Azure Key Vault
+        id: get-secrets
+        uses: softprops/action-azure-keyvault@v1
         with:
-          keyvault: "taskdbstore"
-          secrets: "DB-HOST"
+          secrets: |
+            - name: DB-HOST
+              keyvault: "taskdbstore"
 
       # - name: Apply Secrets Deploy to Kubernetes
       #   run: |
