--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -51,12 +51,12 @@ jobs:
         uses: azure/cli@v1
 
       - name: Retrieve secrets from Azure Key Vault
+        uses: DawidB/get-secret-from-keyvault@master
         id: get-secrets
-        uses: softprops/action-azure-keyvault@v1
         with:
-          secrets: |
-            - name: DB-HOST
-              keyvault: "taskdbstore"
+          azure_credentials: ${{ secrets.AZURE_CREDENTIALS }}
+          key_vault_name: ${{ secrets.VAULT }}
+          secret_name: DB-HOST
 
       # - name: Apply Secrets Deploy to Kubernetes
       #   run: |
