--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,14 +25,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # - name: Build and Push Docker Image
-      #   uses: mr-smithers-excellent/docker-build-push@v6
-      #   with:
-      #     image: confidencedev/taskdb
-      #     tags: latest
-      #     registry: docker.io
-      #     username: ${{ secrets.DOCKER_USERNAME }}
-      #     password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build and Push Docker Image
+        uses: mr-smithers-excellent/docker-build-push@v6
+        with:
+          image: confidencedev/taskdb
+          tags: latest
+          registry: docker.io
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Install Azure CLI
         run: |
@@ -47,28 +47,10 @@ jobs:
       - name: Get AKS Credentials
         run: az aks get-credentials --resource-group ${{ env.resourceGroup }} --name ${{ env.clusterName }}
 
-      - name: Install Azure CLI
-        uses: azure/cli@v1
+      - name: Install kubectl cli
+        run: |
+          sudo az aks install-cli
 
-      - name: Retrieve secrets from Azure Key Vault
-        uses: DfE-Digital/keyvault-yaml-secret@v1
-        id: keyvault-yaml-secret
-        with:
-          keyvault: ${{ secrets.VAULT }}
-          inlineScript: |
-            value1=$(az keyvault secret show --name DB-HOST --vault-name taskdbstore --query value -o tsv)
-            echo $value1
-
-      # - name: Apply Secrets Deploy to Kubernetes
-      #   run: |
-      #     sed -e "s/{{${{ steps.get_secrets.outputs.DB-DIALECT }}}}/${DB-DIALECT}/g" \
-      #         -e "s/{{${{ steps.get_secrets.outputs.DB-HOST }}}}/${DB-HOST}/g" \
-      #         -e "s/{{${{ steps.get_secrets.outputs.DB-NAME }}}}/${DB-NAME}/g" \
-      #         -e "s/{{${{ steps.get_secrets.outputs.DB-PASSWORD }}}}/${DB-PASSWORD}/g" \
-      #         -e "s/{{${{ steps.get_secrets.outputs.DB-USERNAME }}}}/${DB-USERNAME}/g" \
-      #         -e "s/{{${{ steps.get_secrets.outputs.GITHUB-CLIENT-ID }}}}/${GITHUB-CLIENT-ID}/g" \
-      #         -e "s/{{${{ steps.get_secrets.outputs.GITHUB-CLIENT-SECRET }}}}/${GITHUB-CLIENT-SECRET}/g" \
-      #         -e "s/{{${{ steps.get_secrets.outputs.GOOGLE-CLIENT-ID }}}}/${GOOGLE-CLIENT-ID}/g" \
-      #         -e "s/{{${{ steps.get_secrets.outputs.GOOGLE-CLIENT-SECRET }}}}/${GOOGLE-CLIENT-SECRET}/g" \
-      #         -e "s/{{${{ steps.get_secrets.outputs.SESSION-SECRET }}}}/${SESSION-SECRET}/g" \
-      #         k8s/deployment.yaml | kubectl apply -f -
+      - name: Apply Kubernetes Deployment
+        run: |
+          kubectl apply -f deployment.yml
