--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -50,7 +50,8 @@ jobs:
       - name: Install kubectl cli
         run: |
           sudo az aks install-cli
+          az keyvault secret show --name "DB-HOST" --vault-name "taskdbstore" --query "value" --output tsv
 
-      - name: Apply Kubernetes Deployment
-        run: |
-          kubectl apply -f deployment.yml
+      # - name: Apply Kubernetes Deployment
+      #   run: |
+      #     kubectl apply -f deployment.yml
