--- a/deployment.yml
+++ b/deployment.yml
@@ -23,8 +23,26 @@ spec:
               memory: "128Mi"
               cpu: "500m"
           env:
-            - name: KEY_VAULT_URL
-              value: "https://taskdbstore.vault.azure.net"
+            - name: GOOGLE_CLIENT_ID
+              value: "{{GOOGLE_CLIENT_ID}}"
+            - name: GOOGLE_CLIENT_SECRET
+              value: "{{GOOGLE_CLIENT_SECRET}}"
+            - name: GITHUB_CLIENT_ID
+              value: "{{GITHUB_CLIENT_ID}}"
+            - name: GITHUB_CLIENT_SECRET
+              value: "{{GITHUB_CLIENT_SECRET}}"
+            - name: SESSION_SECRET
+              value: "{{SESSION_SECRET}}"
+            - name: DB_NAME
+              value: "{{DB_NAME}}"
+            - name: DB_USERNAME
+              value: "{{DB_USERNAME}}"
+            - name: DB_PASSWORD
+              value: "{{DB_PASSWORD}}"
+            - name: DB_HOST
+              value: "{{DB_HOST}}"
+            - name: DB_DIALECT
+              value: "{{DB_DIALECT}}"
 ---
 apiVersion: v1
 kind: Service
