--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,14 +25,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # - name: Build and Push Docker Image
-      #   uses: mr-smithers-excellent/docker-build-push@v6
-      #   with:
-      #     image: confidencedev/taskdb
-      #     tags: latest
-      #     registry: docker.io
-      #     username: ${{ secrets.DOCKER_USERNAME }}
-      #     password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build and Push Docker Image
+        uses: mr-smithers-excellent/docker-build-push@v6
+        with:
+          image: confidencedev/taskdb
+          tags: latest
+          registry: docker.io
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Install Azure CLI
         run: |
@@ -58,29 +58,16 @@ jobs:
               echo "$secret=$value" >> $GITHUB_ENV
           done
 
-      - name: Use Secrets
+      - name: Apply Secrets Deploy to Kubernetes
         run: |
-          echo "DB Host: ${{ env.GOOGLE-CLIENT-ID }}"
-          echo "DB Host: ${{ env.GOOGLE-CLIENT-SECRET }}"
-          echo "DB Host: ${{ env.GITHUB-CLIENT-ID }}"
-          echo "DB Host: ${{ env.GITHUB-CLIENT-SECRET }}"
-          echo "DB Host: ${{ env.SESSION-SECRET }}"
-          echo "DB Host: ${{ env.DB-NAME }}"
-          echo "DB Host: ${{ env.DB-USERNAME }}"
-          echo "DB Host: ${{ env.DB-PASSWORD }}"
-          echo "DB Host: ${{ env.DB-HOST }}"
-          echo "DB Host: ${{ env.DB-DIALECT }}"
-
-      # - name: Apply Secrets Deploy to Kubernetes
-      #   run: |
-      #     sed -e "s/${{ env.GOOGLE-CLIENT-ID }}/${GOOGLE_CLIENT_ID}/g" \
-      #         -e "s/${{ env.GOOGLE-CLIENT-SECRET }}/${GOOGLE_CLIENT_SECRET}/g" \
-      #         -e "s/${{ env.GITHUB-CLIENT-ID }}/${GITHUB-CLIENT-ID}/g" \
-      #         -e "s/${{ env.GITHUB-CLIENT-SECRET }}/${GITHUB-CLIENT-SECRET}/g" \
-      #         -e "s/${{ env.SESSION-SECRET }}/${SESSION-SECRET}/g" \
-      #         -e "s/${{ env.DB-NAME }}/${DB-NAME}/g" \
-      #         -e "s/${{ env.DB-USERNAME }}/${DB-USERNAME}/g" \
-      #         -e "s/${{ env.DB-PASSWORD }}/${DB-PASSWORD}/g" \
-      #         -e "s/${{ env.DB-HOST }}/${DB-HOST}/g" \
-      #         -e "s/${{ env.DB-DIALECT }}/${DB-DIALECT}/g" \
-      #         k8s/deployment.yaml | kubectl apply -f -
+          sed -e "s/${{ env.GOOGLE-CLIENT-ID }}/${GOOGLE_CLIENT_ID}/g" \
+              -e "s/${{ env.GOOGLE-CLIENT-SECRET }}/${GOOGLE_CLIENT_SECRET}/g" \
+              -e "s/${{ env.GITHUB-CLIENT-ID }}/${GITHUB-CLIENT-ID}/g" \
+              -e "s/${{ env.GITHUB-CLIENT-SECRET }}/${GITHUB-CLIENT-SECRET}/g" \
+              -e "s/${{ env.SESSION-SECRET }}/${SESSION-SECRET}/g" \
+              -e "s/${{ env.DB-NAME }}/${DB-NAME}/g" \
+              -e "s/${{ env.DB-USERNAME }}/${DB-USERNAME}/g" \
+              -e "s/${{ env.DB-PASSWORD }}/${DB-PASSWORD}/g" \
+              -e "s/${{ env.DB-HOST }}/${DB-HOST}/g" \
+              -e "s/${{ env.DB-DIALECT }}/${DB-DIALECT}/g" \
+              k8s/deployment.yaml | kubectl apply -f -
