--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -70,4 +70,4 @@ jobs:
               -e "s/${{ env.DB-PASSWORD }}/${DB-PASSWORD}/g" \
               -e "s/${{ env.DB-HOST }}/${DB-HOST}/g" \
               -e "s/${{ env.DB-DIALECT }}/${DB-DIALECT}/g" \
-              k8s/deployment.yaml | kubectl apply -f -
+              deployment.yaml | kubectl apply -f -
