--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -60,7 +60,7 @@ jobs:
 
       - name: Apply Secrets Deploy to Kubernetes
         run: |
-          sed -e "s/${{ env.GOOGLE-CLIENT-ID }}/${google-client-id}/g" \
+          sed -e "s/hello/${google-client-id}/g" \
               -e "s/${{ env.GOOGLE-CLIENT-SECRET }}/${google-client-secret}/g" \
               -e "s/${{ env.GITHUB-CLIENT-ID }}/${github-client-id}/g" \
               -e "s/${{ env.GITHUB-CLIENT-SECRET }}/${github-client-secret}/g" \
