--- a/deployment.yml
+++ b/deployment.yml
@@ -23,26 +23,26 @@ spec:
               memory: "128Mi"
               cpu: "500m"
           env:
-            - name: GOOGLE_CLIENT_ID
-              value: "{{google-client-id}}}"
+            - name: google-client-id
+              value: "{{google-client-id}}"
             - name: GOOGLE_CLIENT_SECRET
-              value: "{{google-client-secret}}"
+              value: "{{GOOGLE-CLIENT-SECRET}}"
             - name: GITHUB_CLIENT_ID
-              value: "{{github-client-id}}"
+              value: "{{GITHUB-CLIENT-ID}}"
             - name: GITHUB_CLIENT_SECRET
-              value: "{{github-client-secret}}"
+              value: "{{GITHUB-CLIENT-SECRET}}"
             - name: SESSION_SECRET
-              value: "{{SESSION_SECRET}}"
+              value: "{{SESSION-SECRET}}"
             - name: DB_NAME
-              value: "{{DB_NAME}}"
+              value: "{{DB-NAME}}"
             - name: DB_USERNAME
-              value: "{{DB_USERNAME}}"
+              value: "{{DB-USERNAME}}"
             - name: DB_PASSWORD
-              value: "{{DB_PASSWORD}}"
+              value: "{{DB-PASSWORD}}"
             - name: DB_HOST
-              value: "{{DB_HOST}}"
+              value: "{{DB-HOST}}"
             - name: DB_DIALECT
-              value: "{{DB_DIALECT}}"
+              value: "{{DB-DIALECT}}"
 ---
 apiVersion: v1
 kind: Service
