--- a/deployment.yml
+++ b/deployment.yml
@@ -24,9 +24,9 @@ spec:
               cpu: "500m"
           env:
             - name: GOOGLE_CLIENT_ID
-              value: ""
+              value: "{{GOOGLE_CLIENT_ID}}"
             - name: GOOGLE_CLIENT_SECRET
-              value: ""
+              value: "{{GOOGLE_CLIENT_SECRET}}"
             - name: GITHUB_CLIENT_ID
               value: "{{GITHUB-CLIENT-ID}}"
             - name: GITHUB_CLIENT_SECRET
