--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,14 +25,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # - name: Build and Push Docker Image
-      #   uses: mr-smithers-excellent/docker-build-push@v6
-      #   with:
-      #     image: confidencedev/taskdb
-      #     tags: latest
-      #     registry: docker.io
-      #     username: ${{ secrets.DOCKER_USERNAME }}
-      #     password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build and Push Docker Image
+        uses: mr-smithers-excellent/docker-build-push@v6
+        with:
+          image: confidencedev/taskdb
+          tags: latest
+          registry: docker.io
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Install Azure CLI
         run: |
