--- a/deployment.yml
+++ b/deployment.yml
@@ -51,7 +51,7 @@ metadata:
 spec:
   type: LoadBalancer
   selector:
-    app: creator-service-app
+    app: taskdb-app
   ports:
     - protocol: TCP
       port: 80
